# xEmoRec-A-Unified-Architecture-for-Explainable-Emotion-Recognition

./: .gitignore  README.md  README.md.bak  pyproject.toml  requirements.txt
configs/: README.md
notebooks/: Adaptive_XAI_modified_V2_Fig_Regenerated.ipynb  Model_Training.ipynb
results/: classwise_auc.csv  classwise_auc_pivot.csv  final_metrics_shortlist.csv  friedman_auc.csv  pairwise_wilcoxon_with_holm.csv  repeated_runs_aggregate.csv  repeated_runs_summary.csv  report.txt  screening_metrics_all_candidates.csv  screening_summary_all_candidates.csv  subset_analysis.csv  summary_overall.csv  top_tokens_per_instance.csv  topk_sweep_summary.csv
scripts/: run_adaptive_xai.py  run_pipeline.py  train_model.py
src/emotion_xai/: __init__.py  data.py  faithfulness.py  model.py  plotting.py  reproducibility.py  train.py  xai.py
