[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emotion-xai-pipeline"
version = "0.1.0"
description = "Reproducible RoBERTa-CNN-BiLSTM emotion classification and adaptive XAI faithfulness pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "torch>=2.0",
    "transformers>=4.35",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
